add_subdirectory(core)
add_subdirectory(extract)
if(SG_MODULE_GENERATE)
  add_subdirectory(generate)
endif()
if(SG_MODULE_ANALYZE)
  add_subdirectory(analyze)
endif()
if(SG_MODULE_DYNAMICS)
  add_subdirectory(dynamics)
endif()

if(SG_MODULE_SCRIPTS)
  add_subdirectory(scripts)
  add_subdirectory(itk)
endif()

if(SG_MODULE_VISUALIZE)
  add_subdirectory(visualize)
endif()

if(SG_MODULE_LOCATE)
  add_subdirectory(locate)
endif()

if(SG_MODULE_COMPARE)
  add_subdirectory(compare)
endif()
