# Optional VISUALIZE compile definition (linking SGVisualize)
set(SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_DEPENDS "")
set(SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_COMPILE_DEFINITION "")
if(SG_MODULE_VISUALIZE)
  option(SG_MODULE_${SG_MODULE_NAME}_ENABLE_VISUALIZE "Enable visualization in tests of this module" OFF)
  mark_as_advanced(SG_MODULE_${SG_MODULE_NAME}_ENABLE_VISUALIZE)
  if(SG_MODULE_${SG_MODULE_NAME}_ENABLE_VISUALIZE)
    list(APPEND SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_DEPENDS SGVisualize)
    set(SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_COMPILE_DEFINITION "VISUALIZE")
  endif()
endif()

set(SG_MODULE_${SG_MODULE_NAME}_TEST_DEPENDS
  ${SG_MODULE_${SG_MODULE_NAME}_LIBRARY}
  ${SG_MODULE_${SG_MODULE_NAME}_DEPENDS}
  ${SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_DEPENDS}
  ${DGTAL_LIBRARIES}
  ${GTEST_LIBRARIES})
set(SG_MODULE_${SG_MODULE_NAME}_TEST_SYSTEM_INCLUDE_DIRS
  ${DGTAL_INCLUDE_DIRS}
  )
set(SG_MODULE_${SG_MODULE_NAME}_TESTS
  test_merge_nodes.cpp
  test_spatial_graph_reduction.cpp
  test_split_loop.cpp
  test_clusters.cpp
  )

SG_add_gtests(
  # Optional compile_definition (VISUALIZE)
  ${SG_MODULE_${SG_MODULE_NAME}_OPTIONAL_TEST_COMPILE_DEFINITION})
